[GTK][X11] REGRESSION(r259944): Wrong position of select popup menu in X11 https://bugs.webkit.org/show_bug.cgi?id=210603

Patch by Carlos Garcia Campos <cgarcia@igalia.com> on 2020-04-17
Reviewed by Michael Catanzaro.

gdk_window_move_to_rect expects the given rectangle in coordinates relative to the top-left corner of the window
that the popup window is transient for. We were using screen coordinates.

* UIProcess/gtk/WebPopupMenuProxyGtk.cpp:
(WebKit::WebPopupMenuProxyGtk::showPopupMenu): Translate widget coordinates to window coordinates before passing
the rectangle to gdk_window_move_to_rect().

Canonical link: https://commits.webkit.org/223525@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@260252 268f45cc-cd09-0410-ab3c-d52691b4dbfc